--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
-.App {
+.app {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
   max-width: 1024px;
 
   margin-left: auto;
   margin-right: auto;
-  padding: 30px;
+  padding: 20px;
 }
