--- a/src/components/IssueList/IssueList.css
+++ b/src/components/IssueList/IssueList.css
@@ -3,9 +3,15 @@
   flex-direction: column;
   gap: 10px;
 
+  height: 100%;
+
   padding: 5px;
 
   overflow-y: auto;
+}
+
+.issueList.dragOver {
+  background-color: bisque;
 }
 
 .issueItem {
@@ -18,7 +24,11 @@
   border: 1px solid black;
   padding: 10px;
 
+  background-color: white;
+
   box-sizing: border-box;
+
+  cursor: move;
 }
 
 .row {
